# escheck

./: Cargo.toml  README.md  build.rs  demo.tape
src/: loader.js  main.rs  prelude.js  rule.rs  rule_exec_env_ffi.rs  rule_executor.rs
src/rules/: block-scoped-var.js  callback-return.js  constructor-super.js  default-case-last.js  default-param-last.js  for-direction.js  func-style.js  guard-for-in.js  handle-callback-err.js  id-match.js  max-classes-per-file.js  max-depth.js  max-len.js  max-nested-callbacks.js  no-array-constructor.js  no-async-promise-executor.js  no-await-in-loop.js  no-bitwise.js  no-buffer-constructor.js  no-caller.js  no-case-declarations.js  no-compare-neg-zero.js  no-continue.js  no-debugger.js  no-delete-var.js  no-dupe-args.js  no-duplicate-imports.js  no-empty-character-class.js  no-empty-pattern.js  no-eq-null.js  no-fallthrough.js  no-global-assign.js  no-implicit-globals.js  no-lone-blocks.js  no-loop-func.js  no-loss-of-precision.js  no-mixed-spaces-and-tabs.js  no-multi-assign.js  no-native-reassign.js  no-negated-condition.js  (+41 more)
