[package]
name = "escheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
dashmap = "5.2"
deno_console = "0.72"
deno_core = "0.154"
derive_builder = "0.11.2"
futures = "0.3"
fxhash = "0.2"
jsonschema = "0.16"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "compat"] }
url = "2"
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }
v8 = "0.51"

[build-dependencies]
deno_core = "0.154"
deno_console = "0.72"
